--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ markers =
 
 # Asyncio configuration
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 
 # Output configuration
 addopts = 
