--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ spacy==3.8.2
 # State Management
 redis==5.2.1
 python-multipart==0.0.19
+sse-starlette==2.1.3
 
 # Async Support
 httpx>=0.23.0,<1.0
